courses/430_programming-languages/assignment-6/tests/error/hw4_eval32d.correct
!= requires matching types, found 'string' and 'bool'
